--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -33,6 +33,10 @@ body {
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
+    --badge-pending: #f77f00;
+    --badge-going: #79be79;
+    --badge-checked-in: #91d1ce;
+    --badge-rejected: #e5383b;
   }
   .dark {
     --background: 0 0% 3.9%;
